fix: adjust wave spacing

--- a/src/assets/styles/base/_helpers.scss
+++ b/src/assets/styles/base/_helpers.scss
@@ -180,26 +180,13 @@
 .wave {
     height: auto;
     max-width: 100%;
-    position: absolute;
 }
 
 .wave--bottom {
-    inset-block-end: -1px;
-}
-
-.wave--top {
-    inset-block-start: -1px;
+    margin-block-end: -7px;
 }
 
 @media (min-width: 960px) {
-    .wave--bottom {
-        inset-block-end: 0;
-    }
-
-    .wave--top {
-        inset-block-start: 0;
-    }
-
     .md\:hidden {
         display: none;
     }
